# RoBiFusion

./: README.md  setup.py
configs/robifusion/: robifusion_nusc_lc.py  robifusion_nusc_lc_end_to_end.py  robifusion_nusc_lc_wihout_bifusion.py  robifusion_nusc_lc_without_gtdepth.py  robifusion_nusc_oc.py  robifusion_nusc_ol.py
configs/transfusion/: transfusion_nusc_voxel_L.py
mmdet3d/: __init__.py
mmdet3d/core/: __init__.py
mmdet3d/core/bbox/: __init__.py
mmdet3d/core/hook/: __init__.py  paste_stop_hook.py
mmdet3d/datasets/: __init__.py  nuscenes_dataset.py  waymo_dataset.py
mmdet3d/datasets/pipelines/: __init__.py  formating.py  gt_depth.py  loading.py  transforms_3d.py
mmdet3d/models/: __init__.py  builder.py
mmdet3d/models/backbones/: __init__.py  repvgg.py  second.py
mmdet3d/ops/: __init__.py
mmdet3d/ops/voxel_pooling_train/src/: CMakeLists.txt  voxel_pooling_train_forward.cpp
tools/: create_data.py  dist_test.sh  dist_test_camera_noise.sh  dist_test_gt_depth.sh  dist_test_lidar_noise.sh  dist_test_lidar_noise1.sh  dist_train.sh  test.py  test_camera_noise.py  test_gt_depth.py  test_lidar_noise.py  test_lidar_noise1.py  train.py
tools/analysis_checkpoints/: split_model.py
tools/analysis_tools/: analyze_logs.py
tools/data_converter/: nuscenes_converter.py
tools/misc/: browse_dataset.py
tools/visualizations/: vis_lr.py
visualize/: __init__.py  utils.py  visualize_bev_feat.py  visualize_depth_feat.py  visualize_hook.py  visualize_point_depth_feat.py  visualize_point_depth_feat_fuse.py  visualize_point_depth_feat_noise.py
(+65 files in other folders)
